# ChatClient

./: .gitignore  AddFriendDialog.cpp  AddFriendDialog.h  AddFriendDialog.ui  CMakeLists.txt  CMakeUserPresets.json  ChatBubble.h  ChatDialog.cpp  ChatDialog.h  ChatDialog.ui  ChatListWidget.cpp  ChatListWidget.h  ClickedButton.cpp  ClickedButton.h  ContactItem.cpp  ContactItem.h  ContactListWidget.cpp  ContactListWidget.h  CustomScrollArea.cpp  CustomScrollArea.h  MessageItem.cpp  MessageItem.h  MessageListWidget.cpp  MessageListWidget.h  NewFriendItem.cpp  NewFriendItem.h  NewFriendWidget.cpp  NewFriendWidget.h  README.md  SelectedButton.cpp  SelectedLabel.cpp  SelectedLabel.h  TODO.md  TcpManager.cpp  TcpManager.h  TextBubble.cpp  UserInfo.cpp  UserInfo.h  UserInfoWidget.cpp  UserInfoWidget.h  (+23 more)
header/: AddFriendDialog.h  ChatBubble.h  ChatDialog.h  ChatItem.h  ChatListWidget.h  ClickedLabel.h  ContactItem.h  ContactListWidget.h  Data.h  MessageItem.h  MessageListWidget.h  NewFriendItem.h  SelectedButton.h  SelectedLabel.h  TcpManager.h  TextBubble.h  UserInfoWidget.h  UserManager.h  global.h  httpmanager.h  logindialog.h  mainwindow.h
resources/styles/: chat_dialog.qss  stylesheet.qss
source/: AddFriendDialog.cpp  ChatBubble.cpp  ChatDialog.cpp  ChatItem.cpp  ChatListWidget.cpp  ClickedButton.cpp  ClickedLabel.cpp  ContactItem.cpp  ContactListWidget.cpp  MessageItem.cpp  MessageListWidget.cpp  NewFriendItem.cpp  NewFriendWidget.cpp  TcpManager.cpp  TextBubble.cpp  UserInfoWidget.cpp  UserManager.cpp  global.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  resetdialog.cpp
ui/: ChatDialog.ui  UserInfoWidget.ui  logindialog.ui  mainwindow.ui  registerdialog.ui
